--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Love me Back</title>
   </head>
   <body>
-    <h1>Love me Back</h1>
+    <h1 style="text-align: center">Love me Back</h1>
   
     <p>Love me Back é uma história criada por mim (Isabella). Nesse, será contado um romance clichê do tipo "Friends to Lovers".
      Com direito a insegurança de ambos os personagens sobre seus sentimentos, pois bookstan ama sofrer sobre os personagens enquanto lê, não é?</p>
