--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Love me Back</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1 style="text-align: center">Love me Back</h1>
